--- a/views/products/form.ejs
+++ b/views/products/form.ejs
@@ -112,18 +112,49 @@
             <div class="tab-pane" id="link4">
                 <div class="form-row">
                     <div class="form-group bmd-form-group col-md-12">
-                        <label for="" class="bmd-label-static">
-                            Service Output
+                        <label for="offers[seller][id]" class="bmd-label-static">
+                            販売者
                         </label>
-                        <a class="d-block pt-1" data-toggle="collapse" href="#editServiceOutputJson" role="button"
-                            aria-expanded="false" aria-controls="editServiceOutputJson">
-                            編集する
-                        </a>
 
-                        <div class="collapse" id="editServiceOutputJson">
-                            <textarea class="form-control" name="serviceOutputStr"
-                                rows=20><%= JSON.stringify(forms.serviceOutput, null, '\t') %></textarea>
+                        <% sellers.forEach((seller) => { %>
+                        <%
+                        let checked = false;
+                        if (Array.isArray(forms.offers)
+                            && forms.offers.some(
+                                (o) => o.seller && o.seller.id === seller.id
+                            )
+                        ) {
+                            checked = true;
+                        }
+                        %>
+                        <div class="form-check form-check-inline">
+                            <label class="form-check-label">
+                                <input class="form-check-input" type="checkbox" <% if (checked) { %> checked="checked"
+                                    <% } %> value="<%= seller.id %>" name="offers[seller][id]"><%= seller.name.ja %>
+                                <span class="form-check-sign">
+                                    <span class="check"></span>
+                                </span>
+                            </label>
                         </div>
+                        <% }) %>
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group bmd-form-group col-md-2">
+                        <label class="bmd-label-static" for="offersValidFrom">
+                            販売期間(from)
+                        </label>
+                        <input class="form-control datepicker" name="offersValidFrom" id="offersValidFrom"
+                            value="<%= forms.offersValidFrom %>">
+                    </div>
+
+                    <div class="form-group bmd-form-group col-md-2">
+                        <label class="bmd-label-static" for="offersValidThrough">
+                            販売期間(through)
+                        </label>
+                        <input class="form-control datepicker" name="offersValidThrough" id="offersValidThrough"
+                            value="<%= forms.offersValidThrough %>">
                     </div>
                 </div>
 
@@ -140,6 +171,23 @@
                         <div class="collapse" id="editOffersJson">
                             <textarea class="form-control" name="offersStr"
                                 rows=20><%= JSON.stringify(forms.offers, null, '\t') %></textarea>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group bmd-form-group col-md-12">
+                        <label for="" class="bmd-label-static">
+                            Service Output
+                        </label>
+                        <a class="d-block pt-1" data-toggle="collapse" href="#editServiceOutputJson" role="button"
+                            aria-expanded="false" aria-controls="editServiceOutputJson">
+                            編集する
+                        </a>
+
+                        <div class="collapse" id="editServiceOutputJson">
+                            <textarea class="form-control" name="serviceOutputStr"
+                                rows=20><%= JSON.stringify(forms.serviceOutput, null, '\t') %></textarea>
                         </div>
                     </div>
                 </div>
