--- a/views/priceSpecifications/index.ejs
+++ b/views/priceSpecifications/index.ejs
@@ -120,8 +120,8 @@ PS-02
                                     <td name="appliesToCategoryCodeSetName__appliesToCategoryCode.codeValue">
                                         $appliesToCategoryCodeSetName$
                                         $appliesToCategoryCode.codeValue$</td>
-                                    <td name="appliesToMovieTicketType__appliesToMovieTicket.name">
-                                        $appliesToMovieTicketType$
+                                    <td name="appliesToMovieTicket.serviceType__appliesToMovieTicket.name">
+                                        $appliesToMovieTicket.serviceType$
                                         $appliesToMovieTicket.name$
                                     </td>
                                     <td name="appliesToVideoFormat">
