### Added - 販売者編集を追加

--- a/views/sellers/_dataTables.ejs
+++ b/views/sellers/_dataTables.ejs
@@ -38,7 +38,7 @@
                     <tbody>
                         <tr id="templateRow" _id="$id$">
                             <td name="id__id">
-                                <a target="_blank" href="#"">
+                                <a target="_blank" href="/sellers/$id$/update">
                                     $id$
                                     <i class=" material-icons" style="font-size: 1.2em;">open_in_new</i>
                                 </a>
