--- a/views/common/messages.ejs
+++ b/views/common/messages.ejs
@@ -18,7 +18,7 @@
 <script>
     $.notify({
         // options
-        message: '<%= message %>'
+        message: '<%= String(message).replace("\n", " ") %>'
     }, {
         // settings
         type: 'danger',
