--- a/views/sellers/form.ejs
+++ b/views/sellers/form.ejs
@@ -13,11 +13,6 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#link2" role="tablist">
-                    有効性
-                </a>
-            </li>
-            <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#link3" role="tablist">
                     追加特性
                 </a>
@@ -36,17 +31,9 @@
                         <label for="identifier" class="bmd-label-static">
                             コード<span class="text-danger">＊</span>
                         </label>
-                        <% if (isNew) { %>
                         <input type="text" class="form-control" name="identifier" id="identifier" placeholder=""
                             maxlength=30 value="<%= forms.identifier %>">
                         <span class="bmd-help">半角30文字以内でご入力ください</span>
-                        <% } else { %>
-                        <label for="identifier" class="bmd-label-static">
-                            コード<span class="text-danger">＊</span>
-                        </label>
-                        <input type="text" disabled class="form-control" value="<%= forms.identifier %>">
-                        <input type="hidden" name="identifier" value="<%= forms.identifier %>">
-                        <% } %>
                         <% if (errors && errors.identifier) { %>
                         <span class="bmd-help text-danger d-block">
                             <%- errors.identifier.msg %>
@@ -55,38 +42,22 @@
                     </div>
 
                     <div class="form-group bmd-form-group col-md-3">
-                        <label for="itemOffered[typeOf]" class="bmd-label-static">
-                            アイテム<span class="text-danger">＊</span>
+                        <label for="typeOf" class="bmd-label-static">
+                            タイプ<span class="text-danger">＊</span>
                         </label>
-                        <select class="form-control" name="itemOffered[typeOf]">
+                        <select class="form-control" name="typeOf">
                             <option value="" disabled selected>選択してください</option>
-                            <% productTypes.forEach((productType) => { %>
-                            <option value="<%= productType.codeValue %>"
-                                <% if (forms.itemOffered!==undefined && forms.itemOffered.typeOf === productType.codeValue) { %>
-                                selected<% } %>><%= productType.name %></option>
+                            <% Object.keys(OrganizationType).forEach((key) => { %>
+                            <option value="<%= OrganizationType[key] %>"
+                                <% if (forms.typeOf === OrganizationType[key]) { %> selected<% } %>>
+                                <%= OrganizationType[key] %></option>
                             <% }) %>
                         </select>
-                        <% if (errors && errors['itemOffered[typeOf]']) { %>
+                        <% if (errors && errors['typeOf']) { %>
                         <span class="bmd-help text-danger d-block">
-                            <%- errors['itemOffered[typeOf'].msg %>
+                            <%- errors['typeOf'].msg %>
                         </span>
                         <% } %>
-                    </div>
-
-                    <div class="form-group bmd-form-group col-md-3">
-                        <label for="category[codeValue]" class="bmd-label-static">
-                            カテゴリー
-                        </label>
-                        <select class="form-control" name="category[codeValue]">
-                            <option value="" selected>指定しない</option>
-                            <% for (let ticketTypeCategory of ticketTypeCategories) { %>
-                            <option value="<%= ticketTypeCategory.codeValue %>"
-                                <% if (forms.category !== undefined && forms.category.codeValue === ticketTypeCategory.codeValue ) { %>
-                                selected <% } %>>
-                                <%= ticketTypeCategory.name.ja %>
-                            </option>
-                            <% } %>
-                        </select>
                     </div>
                 </div>
 
@@ -122,158 +93,33 @@
 
                 <div class="form-row">
                     <div class="form-group bmd-form-group col-md-6">
-                        <label for="alternateName[ja]" class="bmd-label-static">
-                            代替名称(管理名称)<span class="text-danger">＊</span>
+                        <label for="telephone" class="bmd-label-static">
+                            telephone
                         </label>
-                        <input type="text" class="form-control" name="alternateName[ja]" id="alternateName[ja]"
-                            placeholder="" maxlength=64
-                            value="<%= (forms.alternateName!==undefined && forms.alternateName!==null) ? forms.alternateName.ja : '' %>">
-                        <span class="bmd-help">全角64文字以内でご入力ください</span>
-                        <% if (errors && errors['alternateName.ja']) { %>
+                        <input type="text" class="form-control" name="telephone" id="telephone" placeholder=""
+                            maxlength=64 value="<%= forms.telephone %>">
+                        <% if (errors && errors['telephone']) { %>
                         <span class="bmd-help text-danger d-block">
-                            <%- errors['alternateName.ja'].msg %>
-                        </span>
-                        <% } %>
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="form-group bmd-form-group col-md-6">
-                        <label for="priceSpecification[price]" class="bmd-label-static">
-                            発生金額<span class="text-danger">＊</span>
-                        </label>
-                        <div class="input-group">
-                            <input type="text" class="form-control" name="priceSpecification[price]"
-                                id="priceSpecification[price]" placeholder="" maxlength=10 value="<%= (forms.priceSpecification !== undefined && forms.priceSpecification !== null && forms.priceSpecification.price !== undefined)
-                                 ? String(forms.priceSpecification.price)
-                                  : '' %>">
-
-                            <div class="input-group-append">
-                                <span class="input-group-text">円 /</span>
-                            </div>
-
-                            <input type="number" class="form-control"
-                                name="priceSpecification[referenceQuantity][value]"
-                                id="priceSpecification[referenceQuantity][value]" placeholder="" maxlength=10
-                                value="<%= (forms.priceSpecification !== undefined && forms.priceSpecification !== null && forms.priceSpecification.referenceQuantity !== undefined) ? String(forms.priceSpecification.referenceQuantity.value) : '' %>">
-
-                            <%
-                            const unitCodes = [
-                                {codeValue: 'C62', name: '個'},
-                                {codeValue: 'ANN', name: '年'},
-                                {codeValue: 'DAY', name: '日'},
-                                {codeValue: 'SEC', name: '秒'},
-                            ];
-                            %>
-                            <select class="form-control" name="priceSpecification[referenceQuantity][unitCode]">
-                                <% unitCodes.forEach((unitCode) => { %>
-                                <option value="<%= unitCode.codeValue %>"
-                                    <% if (forms.priceSpecification !==undefined && forms.priceSpecification !== null &&
-                                        forms.priceSpecification.referenceQuantity !== undefined &&
-                                        String(forms.priceSpecification.referenceQuantity.unitCode) === unitCode.codeValue ) { %> selected <% } %>>
-                                    <%= unitCode.name %>
-                                </option>
-                                <% }) %>
-                                </option>
-                            </select>
-                        </div>
-                        <span class="bmd-help">半角10文字以内でご入力ください</span>
-                        <% if (errors && errors['priceSpecification.price']) { %>
-                        <span class="bmd-help text-danger d-block">
-                            <%- errors['priceSpecification.price'].msg %>
-                        </span>
-                        <% } %>
-                        <% if (errors && errors['priceSpecification.referenceQuantity.value']) { %>
-                        <span class="bmd-help text-danger d-block">
-                            <%- errors['priceSpecification.referenceQuantity.value'].msg %>
-                        </span>
-                        <% } %>
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="form-group bmd-form-group col-md-12">
-                        <label for="availableAtOrFrom[][id]" class="bmd-label-static">
-                            利用状況
-                        </label>
-
-                        <% applications.forEach((application) => { %>
-                        <%
-                        let checked = false;
-                        if (Array.isArray(forms.availableAtOrFrom) && forms.availableAtOrFrom.some((a)=>a.id === application.id)) {
-                            checked = true;
-                        }
-                        %>
-                        <div class="form-check form-check-inline">
-                            <label class="form-check-label">
-                                <input class="form-check-input" type="checkbox" <% if (checked) { %> checked="checked"
-                                    <% } %> value="<%= application.id %>"
-                                    name="availableAtOrFrom[id]"><%= application.name %>
-                                <span class="form-check-sign">
-                                    <span class="check"></span>
-                                </span>
-                            </label>
-                        </div>
-                        <% }) %>
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="form-group bmd-form-group col-md-6">
-                        <label for="description[ja]" class="bmd-label-static">
-                            補足説明
-                        </label>
-                        <input type="text" class="form-control" name="description[ja]" id="description[ja]"
-                            placeholder="" maxlength=64
-                            value="<%= (forms.description!==undefined && forms.description!==null) ? forms.description.ja : '' %>">
-                        <span class="bmd-help">全角64文字以内でご入力ください</span>
-                        <% if (errors && errors['description.ja']) { %>
-                        <span class="bmd-help text-danger d-block">
-                            <%- errors['description.ja'].msg %>
+                            <%- errors['telephone'].msg %>
                         </span>
                         <% } %>
                     </div>
 
                     <div class="form-group bmd-form-group col-md-6">
-                        <label for="description[en]" class="bmd-label-static">
-                            補足説明英
+                        <label for="url" class="bmd-label-static">
+                            url
                         </label>
-                        <input type="text" class="form-control" name="description[en]" id="description[en]"
-                            placeholder="" maxlength=64
-                            value="<%= (forms.description!==undefined && forms.description!==null) ? forms.description.en : '' %>">
-                        <span class="bmd-help">半角64文字以内でご入力ください</span>
-                        <% if (errors && errors['description.en']) { %>
+                        <input type="text" class="form-control" name="url" id="url" placeholder="" maxlength=256
+                            value="<%= forms.url %>">
+                        <% if (errors && errors['url']) { %>
                         <span class="bmd-help text-danger d-block">
-                            <%- errors['description.en'].msg %>
+                            <%- errors['url'].msg %>
                         </span>
                         <% } %>
                     </div>
                 </div>
             </div>
-            <div class="tab-pane" id="link2">
-                <div class="form-group bmd-form-group">
-                    <label for="priceSpecification[eligibleQuantity][minValue]" class="bmd-label-static">
-                        有効期間
-                    </label>
 
-                    <div class="input-group date" id="datetimepicker2">
-                        <input type="text" class="form-control datepicker" name="validFrom"
-                            value="<%= forms.validFrom %>">
-                        <!-- <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-calendar"></span>
-                        </span> -->
-                        <div class="input-group-append">
-                            <span class="input-group-text" id="basic-addon2">から</span>
-                        </div>
-
-                        <input type="text" class="form-control datepicker" name="validThrough"
-                            value="<%= forms.validThrough %>">
-                        <div class="input-group-append">
-                            <span class="input-group-text" id="basic-addon2">まで有効</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div class="tab-pane" id="link3">
                 <%- include('../common/part/_additionalProperty', {
                     additionalProperty: forms.additionalProperty
@@ -302,26 +148,73 @@
 
                 <div class="form-row">
                     <div class="form-group bmd-form-group col-md-12">
-                        <%
-                        let pointAward = undefined;
-                        if (forms.itemOffered !== undefined && forms.itemOffered !== null) {
-                            pointAward = forms.itemOffered.pointAward;
-                        }
-                        %>
                         <label for="" class="bmd-label-static">
-                            PointAward
+                            parentOrganization
                         </label>
-                        <a class="d-block pt-1" data-toggle="collapse" href="#editPointAwardJson" role="button"
-                            aria-expanded="false" aria-controls="editPointAwardJson">
+                        <a class="d-block pt-1" data-toggle="collapse" href="#editParentOrganizationJson" role="button"
+                            aria-expanded="false" aria-controls="editParentOrganizationJson">
                             編集する
                         </a>
 
-                        <div class="collapse" id="editPointAwardJson">
-                            <textarea class="form-control" name="pointAwardStr"
-                                rows=20><%= JSON.stringify(pointAward, null, '\t') %></textarea>
+                        <div class="collapse" id="editParentOrganizationJson">
+                            <textarea class="form-control" name="parentOrganizationStr"
+                                rows=20><%= JSON.stringify(forms.parentOrganization, null, '\t') %></textarea>
                         </div>
                     </div>
                 </div>
+
+                <div class="form-row">
+                    <div class="form-group bmd-form-group col-md-12">
+                        <label for="" class="bmd-label-static">
+                            paymentAccepted
+                        </label>
+                        <a class="d-block pt-1" data-toggle="collapse" href="#editPaymentAcceptedJson" role="button"
+                            aria-expanded="false" aria-controls="editPaymentAcceptedJson">
+                            編集する
+                        </a>
+
+                        <div class="collapse" id="editPaymentAcceptedJson">
+                            <textarea class="form-control" name="paymentAcceptedStr"
+                                rows=20><%= JSON.stringify(forms.paymentAccepted, null, '\t') %></textarea>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group bmd-form-group col-md-12">
+                        <label for="" class="bmd-label-static">
+                            hasMerchantReturnPolicy
+                        </label>
+                        <a class="d-block pt-1" data-toggle="collapse" href="#editHasMerchantReturnPolicyJson"
+                            role="button" aria-expanded="false" aria-controls="editHasMerchantReturnPolicyJson">
+                            編集する
+                        </a>
+
+                        <div class="collapse" id="editHasMerchantReturnPolicyJson">
+                            <textarea class="form-control" name="hasMerchantReturnPolicyStr"
+                                rows=20><%= JSON.stringify(forms.hasMerchantReturnPolicy, null, '\t') %></textarea>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group bmd-form-group col-md-12">
+                        <label for="" class="bmd-label-static">
+                            makesOffer
+                        </label>
+                        <a class="d-block pt-1" data-toggle="collapse" href="#editMakesOfferJson" role="button"
+                            aria-expanded="false" aria-controls="editMakesOfferJson">
+                            編集する
+                        </a>
+
+                        <div class="collapse" id="editMakesOfferJson">
+                            <textarea class="form-control" name="makesOfferStr"
+                                rows=20><%= JSON.stringify(forms.makesOffer, null, '\t') %></textarea>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
         </div>
 
