### Changed - アクション検索条件拡張

--- a/views/actions/_dataTables.ejs
+++ b/views/actions/_dataTables.ejs
@@ -20,6 +20,21 @@
                             </select>
                         </div>
                         <div class="form-group bmd-form-group col-md-2">
+                            <label for="object[paymentMethod][accountId][$eq]" class="bmd-label-static">
+                                決済アカウント
+                            </label>
+                            <input class="form-control" placeholder="決済アカウント"
+                                name="object[paymentMethod][accountId][$eq]"
+                                id="object[paymentMethod][accountId][$eq]" />
+                        </div>
+                        <div class="form-group bmd-form-group col-md-2">
+                            <label for="object[paymentMethod][typeOf][$eq]" class="bmd-label-static">
+                                決済方法タイプ
+                            </label>
+                            <input class="form-control" placeholder="決済方法タイプ" name="object[paymentMethod][typeOf][$eq]"
+                                id="object[paymentMethod][typeOf][$eq]" />
+                        </div>
+                        <div class="form-group bmd-form-group col-md-2">
                             <label for="object[paymentMethod][paymentMethodId][$eq]" class="bmd-label-static">
                                 決済ID
                             </label>
