### Changed - オファーアドオン利用をデフォルトで有効化

--- a/views/priceSpecifications/form.ejs
+++ b/views/priceSpecifications/form.ejs
@@ -129,7 +129,7 @@
                     <div
                         class="form-group bmd-form-group col-md-3 d-none appliesToConditions <%= PriceSpecificationType.MovieTicketTypeChargeSpecification %>">
                         <label for="appliesToMovieTicket[serviceType]" class="bmd-label-static">
-                            適用ムビチケ券種区分
+                            適用決済カード(ムビチケ券種)区分
                         </label>
 
                         <select class="form-control" name="appliesToMovieTicket[serviceType]">
