--- a/views/priceSpecifications/index.ejs
+++ b/views/priceSpecifications/index.ejs
@@ -74,7 +74,7 @@ PS-02
 
                                 <div class="form-group bmd-form-group col-md-3">
                                     <label for="appliesToMovieTicketType" class="bmd-label-static">
-                                        適用ムビチケ券種区分
+                                        適用決済カード(ムビチケ券種)区分
                                     </label>
                                     <select class="form-control" name="appliesToMovieTicketType">
                                         <option value="">選択してください</option>
@@ -100,7 +100,7 @@ PS-02
                                     <th>仕様タイプ</th>
                                     <th>名称</th>
                                     <th>適用区分</th>
-                                    <th>適用ムビチケ券種区分</th>
+                                    <th>適用決済カード(ムビチケ券種)区分</th>
                                     <th>ムビチケ適用上映方式</th>
                                     <th>金額</th>
                                 </tr>
