--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -124,46 +124,17 @@
         <% if (req.subscription.settings.useProducts) { %>
         <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#services">
-                <i class="material-icons">local_drink</i>
-                <p> プロダクト<span class="badge badge-secondary ml-2">Preview</span>
+                <i class="material-icons">payment</i>
+                <p> プロダクト
                     <b class="caret"></b>
                 </p>
             </a>
             <div class="collapse" id="services">
                 <ul class="nav">
-                    <% if (process.env.USE_OFFER_ADD_ON === '1') { %>
                     <li class="nav-item <%= (displayId === 'PR-00') ? 'active': ''; %>">
                         <a class="nav-link" href="/products?typeOf=Product">
-                            <span class="sidebar-mini"><i class="material-icons">local_drink</i></span>
+                            <span class="sidebar-mini"><i class="icon fas fa-glasses"></i></span>
                             <span class="sidebar-normal">アドオン</span>
-                        </a>
-                    </li>
-                    <% } %>
-                </ul>
-            </div>
-        </li>
-        <% } %>
-
-        <%
-        let offersCategoryCodes = false;
-        if (displayId.slice(0, 3) === 'CC-') {
-            offersCategoryCodes = true;
-        }
-        %>
-        <% if (req.subscription.settings.useCategoryCodes) { %>
-        <li class="nav-item <%= (offersCategoryCodes) ? 'active': ''; %>">
-            <a class="nav-link" data-toggle="collapse" href="#categoryCodes">
-                <i class="material-icons">category</i>
-                <p> 区分
-                    <b class="caret"></b>
-                </p>
-            </a>
-            <div class="collapse<% if (offersCategoryCodes) { %> show<% } %>" id="categoryCodes">
-                <ul class="nav">
-                    <li class="nav-item <%= (displayId === 'CC-00') ? 'active': ''; %>">
-                        <a class="nav-link" href="/categoryCodes">
-                            <span class="sidebar-mini"><i class="material-icons">category</i></span>
-                            <span class="sidebar-normal">各種区分</span>
                         </a>
                     </li>
                 </ul>
@@ -176,6 +147,22 @@
             <a class="nav-link" href="/priceSpecifications">
                 <i class="material-icons">attach_money</i>
                 <p>価格仕様<span class="badge badge-secondary ml-2">Preview</span></p>
+            </a>
+        </li>
+        <% } %>
+
+        <%
+        let offersCategoryCodes = false;
+        if (displayId.slice(0, 3) === 'CC-') {
+            offersCategoryCodes = true;
+        }
+        %>
+        <% if (req.subscription.settings.useCategoryCodes) { %>
+        <li class="nav-item <%= (offersCategoryCodes) ? 'active': ''; %>">
+            <a class="nav-link" href="/categoryCodes">
+                <i class="material-icons">category</i>
+                <p>区分</b>
+                </p>
             </a>
         </li>
         <% } %>
