--- a/views/ticketType/form.ejs
+++ b/views/ticketType/form.ejs
@@ -24,12 +24,12 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#link4" role="tablist">
-                    高度な設定
+                    追加特性
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#link5" role="tablist">
-                    追加特性
+                    高度な設定
                 </a>
             </li>
         </ul>
@@ -58,6 +58,21 @@
                             <%- errors.identifier.msg %>
                         </span>
                         <% } %>
+                    </div>
+
+                    <div class="form-group bmd-form-group col-md-3">
+                        <label for="name[ja]" class="bmd-label-static">
+                            カテゴリー
+                        </label>
+                        <select class="form-control" name="category">
+                            <option value="" selected>指定しない</option>
+                            <% for (let ticketTypeCategory of ticketTypeCategories) { %>
+                            <option value="<%= ticketTypeCategory.codeValue %>"
+                                <% if (forms.category === ticketTypeCategory.codeValue ) { %> selected <% } %>>
+                                <%= ticketTypeCategory.name.ja %>
+                            </option>
+                            <% } %>
+                        </select>
                     </div>
                 </div>
 
@@ -163,34 +178,6 @@
                     </div>
                 </div>
 
-
-                <div class="form-row">
-                    <div class="form-group bmd-form-group col-md-12">
-                        <label for="availableAtOrFrom[][id]" class="bmd-label-static">
-                            利用状況
-                        </label>
-
-                        <% applications.forEach((application) => { %>
-                        <%
-                        let checked = false;
-                        if (Array.isArray(forms.availableAtOrFrom) && forms.availableAtOrFrom.some((a)=>a.id === application.id)) {
-                            checked = true;
-                        }
-                        %>
-                        <div class="form-check form-check-inline">
-                            <label class="form-check-label">
-                                <input class="form-check-input" type="checkbox" <% if (checked) { %> checked="checked"
-                                    <% } %> value="<%= application.id %>"
-                                    name="availableAtOrFrom[id]"><%= application.name %>
-                                <span class="form-check-sign">
-                                    <span class="check"></span>
-                                </span>
-                            </label>
-                        </div>
-                        <% }) %>
-                    </div>
-                </div>
-
                 <div class="form-row">
                     <div class="form-group bmd-form-group col-md-6">
                         <label for="description[ja]" class="bmd-label-static">
@@ -220,14 +207,107 @@
                         <% } %>
                     </div>
                 </div>
-            </div>
-
-            <div class="tab-pane" id="link2">
 
                 <div class="form-row">
                     <div class="form-group bmd-form-group col-md-3">
+                        <label for="color" class="bmd-label-static">
+                            カラー
+                        </label>
+                        <div class="row pt-2 pb-2 px-3">
+                            <input type="text" class="form-control cp-preventtouchkeyboardonshow" name="color"
+                                id="color" value="<%= forms.color %>"
+                                style="background: <%= forms.color %>; color: rgb(255, 255, 255);" title="">
+                            <input type="hidden" name="hiddenColor" id="hiddenColor">
+                        </div>
+                    </div>
+
+                    <div class="form-group bmd-form-group col-md-3">
+                        <label for="accountTitle" class="bmd-label-static">
+                            細目
+                        </label>
+                        <select class="form-control" name="accountTitle">
+                            <option value="" selected>指定しない</option>
+                            <% for (let accountTitle of accountTitles) { %>
+                            <option value="<%= accountTitle.codeValue %>"
+                                <% if (forms.accountTitle==accountTitle.codeValue) { %> selected <% } %>>
+                                <%= accountTitle.name %>
+                            </option>
+                            <% } %>
+                        </select>
+                        <% if (errors && errors.accountTitle) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors.accountTitle.msg %>
+                        </span>
+                        <% } %>
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group bmd-form-group col-md-12">
+                        <label for="availableAtOrFrom[][id]" class="bmd-label-static">
+                            利用状況
+                        </label>
+
+                        <% applications.forEach((application) => { %>
+                        <%
+                        let checked = false;
+                        if (Array.isArray(forms.availableAtOrFrom) && forms.availableAtOrFrom.some((a)=>a.id === application.id)) {
+                            checked = true;
+                        }
+                        %>
+                        <div class="form-check form-check-inline">
+                            <label class="form-check-label">
+                                <input class="form-check-input" type="checkbox" <% if (checked) { %> checked="checked"
+                                    <% } %> value="<%= application.id %>"
+                                    name="availableAtOrFrom[id]"><%= application.name %>
+                                <span class="form-check-sign">
+                                    <span class="check"></span>
+                                </span>
+                            </label>
+                        </div>
+                        <% }) %>
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group bmd-form-group col-md-12">
+                        <label for="availableAddOn" class="bmd-label-static">
+                            アドオン
+                            <a href="javascript:void(0);" data-toggle="tooltip"
+                                title="<p class=&quot;text-left mb-0&quot;>プロダクト管理とオファーカタログ管理にて、アドオンとそのカタログを設定することで、オファーにアドオンを設定することができます。</p>"
+                                style="pointer-events: auto;">
+                                <span class="material-icons" style="font-size: 1.2em;">
+                                    help
+                                </span>
+                            </a>
+                        </label>
+
+                        <% for (let addOn of addOns) { %>
+                        <%
+                        let checked = false;
+                        if (Array.isArray(forms.addOn) && forms.addOn.some((a)=>a.itemOffered.id === addOn.id)) {
+                            checked = true;
+                        }
+                        %>
+                        <div class="form-check form-check-inline">
+                            <label class="form-check-label">
+                                <input class="form-check-input" type="checkbox" <% if (checked) { %> checked="checked"
+                                    <% } %> value="<%= addOn.id %>" name="addOn[itemOffered][id]"><%= addOn.name.ja %>
+                                <span class="form-check-sign">
+                                    <span class="check"></span>
+                                </span>
+                            </label>
+                        </div>
+                        <% } %>
+                    </div>
+                </div>
+            </div>
+
+            <div class="tab-pane" id="link2">
+                <div class="form-row">
+                    <div class="form-group bmd-form-group col-md-3">
                         <label for="priceSpecification[appliesToMovieTicket][serviceType]" class="bmd-label-static">
-                            適用ムビチケ券種区分
+                            適用決済カード(ムビチケ券種)区分
                         </label>
                         <div class="input-group">
                             <select class="form-control" name="priceSpecification[appliesToMovieTicket][serviceType]">
@@ -457,82 +537,14 @@
             </div>
 
             <div class="tab-pane" id="link4">
+                <%- include('../common/part/_additionalProperty', {
+                    additionalProperty: forms.additionalProperty
+                }) %>
+            </div>
+
+            <div class="tab-pane" id="link5">
 
                 <div class="form-row">
-                    <div class="form-group bmd-form-group col-md-4">
-                        <label for="color" class="bmd-label-static">
-                            カラー
-                        </label>
-                        <div class="row pt-2 pb-2 px-3">
-                            <input type="text" class="form-control cp-preventtouchkeyboardonshow" name="color"
-                                id="color" value="<%= forms.color %>"
-                                style="background: <%= forms.color %>; color: rgb(255, 255, 255);" title="">
-                            <input type="hidden" name="hiddenColor" id="hiddenColor">
-                        </div>
-                    </div>
-
-                    <div class="form-group bmd-form-group col-md-4">
-                        <label for="name[ja]" class="bmd-label-static">
-                            カテゴリー
-                        </label>
-                        <select class="form-control" name="category">
-                            <option value="" selected>指定しない</option>
-                            <% for (let ticketTypeCategory of ticketTypeCategories) { %>
-                            <option value="<%= ticketTypeCategory.codeValue %>"
-                                <% if (forms.category === ticketTypeCategory.codeValue ) { %> selected <% } %>>
-                                <%= ticketTypeCategory.name.ja %>
-                            </option>
-                            <% } %>
-                        </select>
-                    </div>
-
-                    <div class="form-group bmd-form-group col-md-4">
-                        <label for="accountTitle" class="bmd-label-static">
-                            細目
-                        </label>
-                        <select class="form-control" name="accountTitle">
-                            <option value="" selected>指定しない</option>
-                            <% for (let accountTitle of accountTitles) { %>
-                            <option value="<%= accountTitle.codeValue %>"
-                                <% if (forms.accountTitle==accountTitle.codeValue) { %> selected <% } %>>
-                                <%= accountTitle.name %>
-                            </option>
-                            <% } %>
-                        </select>
-                        <% if (errors && errors.accountTitle) { %>
-                        <span class="bmd-help text-danger d-block">
-                            <%- errors.accountTitle.msg %>
-                        </span>
-                        <% } %>
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <% if (process.env.USE_OFFER_ADD_ON === '1') { %>
-                    <div class="form-group bmd-form-group col-md-12">
-                        <label for="availableAddOn" class="bmd-label-static">
-                            アドオン
-                        </label>
-
-                        <% for (let addOn of addOns) { %>
-                        <%
-                        let checked = false;
-                        if (Array.isArray(forms.addOn) && forms.addOn.some((a)=>a.itemOffered.id === addOn.id)) {
-                            checked = true;
-                        }
-                        %>
-                        <div class="form-check form-check-inline">
-                            <label class="form-check-label">
-                                <input class="form-check-input" type="checkbox" <% if (checked) { %> checked="checked"
-                                    <% } %> value="<%= addOn.id %>" name="addOn[itemOffered][id]"><%= addOn.name.ja %>
-                                <span class="form-check-sign">
-                                    <span class="check"></span>
-                                </span>
-                            </label>
-                        </div>
-                        <% } %>
-                    </div>
-                    <% } %>
                 </div>
 
                 <% if (!isNew) { %>
@@ -554,12 +566,6 @@
                 </div>
                 <% } %>
 
-            </div>
-
-            <div class="tab-pane" id="link5">
-                <%- include('../common/part/_additionalProperty', {
-                    additionalProperty: forms.additionalProperty
-                }) %>
             </div>
         </div>
 
