### Added - 決済カード区分に対応決済方法を追加 - ムビチケ券種区分チャージ仕様に対応決済方法を追加

--- a/views/categoryCodes/index.ejs
+++ b/views/categoryCodes/index.ejs
@@ -74,6 +74,7 @@ CC-00
                                     <th>コード</th>
                                     <th>分類</th>
                                     <th>名称</th>
+                                    <th>決済方法</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -87,6 +88,9 @@ CC-00
                                     <td name="categoryCodeSetName">$categoryCodeSetName$</td>
                                     <td name="name.ja">
                                         $name.ja$
+                                    </td>
+                                    <td name="paymentMethod.typeOf">
+                                        $paymentMethod.typeOf$
                                     </td>
                                 </tr>
                             </tbody>
