--- a/views/priceSpecifications/index.ejs
+++ b/views/priceSpecifications/index.ejs
@@ -120,7 +120,9 @@ PS-02
                                     <td name="appliesToCategoryCodeSetName__appliesToCategoryCode.codeValue">
                                         $appliesToCategoryCodeSetName$
                                         $appliesToCategoryCode.codeValue$</td>
-                                    <td name="appliesToMovieTicket.serviceType__appliesToMovieTicket.name">
+                                    <td
+                                        name="appliesToMovieTicket.serviceOutput.typeOf__appliesToMovieTicket.serviceType__appliesToMovieTicket.name">
+                                        $appliesToMovieTicket.serviceOutput.typeOf$
                                         $appliesToMovieTicket.serviceType$
                                         $appliesToMovieTicket.name$
                                     </td>
