### Added - 決済カード区分に対応決済方法を追加 - ムビチケ券種区分チャージ仕様に対応決済方法を追加

--- a/views/ticketType/form.ejs
+++ b/views/ticketType/form.ejs
@@ -324,6 +324,15 @@
                                 <% }) %>
                             </select>
                             <div class="input-group-append">
+                                <span class="input-group-text" id="basic-addon2">区分の</span>
+                            </div>
+                        </div>
+                        <div class="input-group">
+                            <select class="form-control"
+                                name="priceSpecification[appliesToMovieTicket][serviceOutput][typeOf]">
+                                <option value="MovieTicket">MovieTicket</option>
+                            </select>
+                            <div class="input-group-append">
                                 <span class="input-group-text" id="basic-addon2">にのみ適用</span>
                             </div>
                         </div>
