### Changed - コンテンツの興行期間検索条件のthroughは意味を成さないので削除

--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -64,21 +64,16 @@ Aa-10
                                     </div>
                                 </div>
 
-                                <div class="form-group bmd-form-group col-md-4">
-                                    <label for="availableThrough" class="bmd-label-static">
-                                        興行期間(From - To)
+                                <div class="form-group bmd-form-group col-md-2">
+                                    <label for="availableFrom" class="bmd-label-static">
+                                        興行終了
                                     </label>
 
                                     <div class="input-group">
                                         <input class="form-control datepicker" placeholder="" maxlength=10
                                             name="availableFrom" id="availableFrom" value="" />
                                         <div class="input-group-append">
-                                            <span class="input-group-text">から</span>
-                                        </div>
-                                        <input class="form-control datepicker" placeholder="" maxlength=10
-                                            name="availableThrough" id="availableThrough" value="" />
-                                        <div class="input-group-append">
-                                            <span class="input-group-text">まで</span>
+                                            <span class="input-group-text">以降</span>
                                         </div>
                                     </div>
                                 </div>
