### Added - 販売者削除を実装

--- a/views/common/messages.ejs
+++ b/views/common/messages.ejs
@@ -18,7 +18,7 @@
 <script>
     $.notify({
         // options
-        message: '<%= String(message).replace("\n", " ") %>'
+        message: '<%= String(message).replace(/\n/g, " ") %>'
     }, {
         // settings
         type: 'danger',
